force-app/main/default/objects/nFORCE__Communication_Provider__c/fields/nFORCE__Is_Org_to_Org__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Is_Org_to_Org__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this provider transmits data from this Salesforce org to another one.</description>
    <label>Is Org to Org Provider</label>
    <type>Checkbox</type>
</CustomField>