force-app/main/default/objects/nFORCE__Communication_Provider__c/fields/nFORCE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is manually populated. It identifies whether a Third Party Communication Provider can send data to nCino. Checked = True. Unchecked = False.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>